# ocadb

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.do/: app.yaml
api/: Dockerfile  config.py  main.py
api/routers/: api_auth.py  objects.py  sample_api.py
api/src/: auth_service.py  crypto_service.py  database_connection.py
api/src/models/: token.py
ocadb/: database.py  exceptions.py
ocadb/cli/: importer.py  ocadb.py
ocadb/files/: common.py  tab_all.py
ocadb/models/: __init__.py  geo.py  object.py
tests/: conftest.py  test_model_geo.py  test_model_object.py  test_ocadb_files.py
